k8s-base-layer-deployment.yaml
###################################
# USERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/users:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: users-service
  annotations:
    cloud.google.com/backend-config: '{"default": "users-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31017
---
###################################
# POSTS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/posts:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                          
---
kind: Service
apiVersion: v1
metadata:
  name: posts-service
  annotations:
    cloud.google.com/backend-config: '{"default": "posts-config"}'
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31018
---
###################################
# ROUTES
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routes
  labels:
    app: routes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: routes
  template:
    metadata:
      labels:
        app: routes
    spec:
      containers:
        - name: routes
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/routes:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                      
---
kind: Service
apiVersion: v1
metadata:
  name: routes-service
  annotations:
    cloud.google.com/backend-config: '{"default": "routes-config"}'
spec:
  type: NodePort
  selector:
    app: routes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31019
---
###################################
# OFFERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offers
  labels:
    app: offers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offers
  template:
    metadata:
      labels:
        app: offers
    spec:
      containers:
        - name: offers
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/offers:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                  
---
kind: Service
apiVersion: v1
metadata:
  name: offers-service
  annotations:
    cloud.google.com/backend-config: '{"default": "offers-config"}'
spec:
  type: NodePort
  selector:
    app: offers
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31020

###################################
# RF005
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf005
  labels:
    app: rf005
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf005
  template:
    metadata:
      labels:
        app: rf005
    spec:
      containers:
        - name: rf005
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/offers:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                  
---
kind: Service
apiVersion: v1
metadata:
  name: rf005-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf005-config"}'
spec:
  type: NodePort
  selector:
    app: rf005
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31021
