k8s-new-services-deployment.yaml
###################################
# SCORES
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scores
  labels:
    app: scores
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scores
  template:
    metadata:
      labels:
        app: scores
    spec:
      containers:
        - name: scores
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/scores:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: scores-service
  annotations:
    cloud.google.com/backend-config: '{"default": "scores-config"}'
spec:
  type: NodePort
  selector:
    app: scores

###################################
# RF003
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf003
  labels:
    app: rf003
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf003
  template:
    metadata:
      labels:
        app: rf003
    spec:
      containers:
        - name: rf003
          image: <URL>
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                  
---
kind: Service
apiVersion: v1
metadata:
  name: rf003-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf003-config"}'
spec:
  type: NodePort
  selector:
    app: rf003
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31021
